# HaskellQuaternionRotation

./: README.md  quaternion.cabal
app/: Main.hs
src/: MathUtils.hs  Utils.hs
