cabal-version:      3.0
name:               quaternion
version:            0.1.0.0
build-type:         Simple

-- The name: field defines the package name.


-- Target : exe:quaternion
-- =======================
--
-- Build the binary executable for this package, i.e. the package named quaternion.
--
-- cabal build exe:quaternion

executable quaternion

   hs-source-dirs:   app
   main-is:          Main.hs
   build-depends:    base >=4.20.0.0 && <5,
                     linear,
                     Utils,
                     mathutils
   default-language: Haskell2010


-- Target : lib:Utils
-- ==================
--
-- Build the named sub-library component called Utils.
--
-- This sub-library component is exported using the module name which is specified by the exposed-modules tag below.
--
-- From what I can gather, and using the following configuration, cabal will search for a file named Utils.hs in the
-- sub-directory named src.

library Utils

    -- Modules exported by the library.
    -- The file which contains the code for the library must be called Utils.hs - not utils.hs

    exposed-modules:  Utils

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.20.0.0 && <5

    default-language: Haskell2010


-- Build the library called : mathutils
--
-- Note that the library is called mathutils immediately below and not MathUtils.

library mathutils

    -- Modules exported by the library.
    -- The file which contains the code for the library must be called Utils.hs - not utils.hs

    exposed-modules:  MathUtils

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.20.0.0 && <5,
                      linear

    default-language: Haskell2010
